# sqlexplore

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  NOTES.md  PLAN.md  PLAN_AUTOCOMPLETE.md  PLAN_AUTOCOMPLETE_UX_CONSITENCY.md  PLAN_LLM.md  PLAN_LLM_ASYNC.md  PLAN_LLM_SQL_IMPROVEMENTS.md  PLAN_MULTI_TABLE.md  PLAN_PYPI_RELEASE.md  PLAN_REFACTOR.md  PLAN_STDIN.md  PLAN_STRUCT.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DOCS_DUCKDB.md  _config.yml  index.md
plans/: PLAN_COL_RESIZE.md  PLAN_MARIMO_MVP.md  PLAN_SESSION_ID.md  PLAN_TUI_MODULE_SPLIT.md  PLAN_UNION_FILES.md  PLAN_WINDOW_PANE_RESIZING.md
src/sqlexplore/: app.py  engine.py  image_cells.py  result_utils.py  sql_templates.py  stdin_io.py  tui.py
src/sqlexplore/cli/: data_args.py  data_paths.py  stdin_io.py
src/sqlexplore/commands/: handlers.py  llm_runner.py  protocols.py  registry.py
src/sqlexplore/completion/: completion_interfaces.py  completion_utils.py  completions.py  helpers.py  models.py  protocols.py
src/sqlexplore/core/: data_source_plan.py  engine.py  engine_models.py  logging_utils.py  marimo_export.py  source_union.py  sql_templates.py
src/sqlexplore/llm/: duckdb_guidance.py  llm_sql.py
src/sqlexplore/ui/: activity_log.py  pane_splitter.py  query_editor.py  results_preview.py  results_table.py  tui.py  tui_app.py  tui_shared.py
tests/sqlexplore/: test_app.py  test_completion_edges.py  test_completion_helpers.py  test_data_args.py  test_engine_commands.py  test_engine_multi_source.py  test_image_cells.py  test_llm_runner.py  test_llm_sql.py  test_main_data_source.py  test_pane_splitter.py  test_result_utils.py  test_sql_templates.py  test_stdin_io.py
