[project]
name = "sqlexplore"
version = "0.1.0"
description = "SQL exploration over data files with your CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlglot>=26.0.0",
    "textual>=7.5.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
sqlexplore = "sqlexplore.app:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting (isort-compatible)
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"  # ["off", "basic", "standard", "strict"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
package = true
