[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlexplore"
version = "0.8.1"
description = "SQL exploration over data files with your CLI and LLM"
readme = "README.md"
license = "MIT"
authors = [{ name = "Dylan Hogg" }]
keywords = ["sql", "duckdb", "cli", "tui", "csv", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Programming Language :: SQL",
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "litellm>=1.81.12",
    "rich>=14.0.0",
    "sqlglot>=26.0.0",
    "textual>=7.5.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/dylanhogg/sqlexplore"
Repository = "https://github.com/dylanhogg/sqlexplore"
Issues = "https://github.com/dylanhogg/sqlexplore/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[project.scripts]
sqlexplore = "sqlexplore.app:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting (isort-compatible)
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"  # ["off", "basic", "standard", "strict"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=sqlexplore --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["sqlexplore"]
relative_files = true

[tool.coverage.paths]
source = ["src/sqlexplore"]

[tool.coverage.report]
fail_under = 80
precision = 1
skip_covered = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except NotImplementedError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
package = true
